# aformula

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  THANKS  aformula-1.0.pc.in  aformula_8h.html  aformula_8h__dep__incl.map  aformula_8h__dep__incl.md5  aformula_8h_source.html  annotated.html  benchmark_8cpp.html  benchmark_8cpp__dep__incl.md5  benchmark_8cpp__incl.md5  benchmark_8cpp_source.html  c__api_8cpp.html  c__api_8cpp_source.html  class_a_formula_1_1_formula-members.html  class_a_formula_1_1_formula.html  class_a_formula_1_1_private_1_1_binary_expr_a_s_t-members.html  class_a_formula_1_1_private_1_1_binary_expr_a_s_t.html  class_a_formula_1_1_private_1_1_binary_expr_a_s_t__coll__graph.map  class_a_formula_1_1_private_1_1_binary_expr_a_s_t__inherit__graph.map  class_a_formula_1_1_private_1_1_binary_expr_a_s_t__inherit__graph.md5  class_a_formula_1_1_private_1_1_call_expr_a_s_t-members.html  class_a_formula_1_1_private_1_1_call_expr_a_s_t.html  class_a_formula_1_1_private_1_1_call_expr_a_s_t__coll__graph.map  class_a_formula_1_1_private_1_1_call_expr_a_s_t__coll__graph.md5  class_a_formula_1_1_private_1_1_call_expr_a_s_t__inherit__graph.map  class_a_formula_1_1_private_1_1_call_expr_a_s_t__inherit__graph.md5  class_a_formula_1_1_private_1_1_code_generator-members.html  class_a_formula_1_1_private_1_1_code_generator.html  class_a_formula_1_1_private_1_1_code_generator__inherit__graph.map  class_a_formula_1_1_private_1_1_expr_a_s_t-members.html  class_a_formula_1_1_private_1_1_expr_a_s_t.html  class_a_formula_1_1_private_1_1_expr_a_s_t__inherit__graph.map  class_a_formula_1_1_private_1_1_expr_a_s_t__inherit__graph.md5  (+141 more)
doc/: .gitignore  aformula.tag
doc/html/: aformula_8h.html  aformula_8h__dep__incl.map  aformula_8h__dep__incl.md5  aformula_8h__incl.md5  aformula_8h_source.html  annotated.html  benchmark_8cpp.html  benchmark_8cpp__incl.map  benchmark_8cpp_source.html  c__api_8cpp.html  c__api_8cpp_source.html  class_a_formula_1_1_formula-members.html  class_a_formula_1_1_formula.html  class_a_formula_1_1_formula__inherit__graph.map  class_a_formula_1_1_formula__inherit__graph.md5  class_a_formula_1_1_private_1_1_binary_expr_a_s_t-members.html  class_a_formula_1_1_private_1_1_binary_expr_a_s_t.html  class_a_formula_1_1_private_1_1_binary_expr_a_s_t__coll__graph.map  class_a_formula_1_1_private_1_1_binary_expr_a_s_t__coll__graph.md5  class_a_formula_1_1_private_1_1_binary_expr_a_s_t__inherit__graph.map  class_a_formula_1_1_private_1_1_binary_expr_a_s_t__inherit__graph.md5  class_a_formula_1_1_private_1_1_call_expr_a_s_t-members.html  class_a_formula_1_1_private_1_1_call_expr_a_s_t.html  class_a_formula_1_1_private_1_1_call_expr_a_s_t__coll__graph.map  class_a_formula_1_1_private_1_1_call_expr_a_s_t__coll__graph.md5  class_a_formula_1_1_private_1_1_call_expr_a_s_t__inherit__graph.map  class_a_formula_1_1_private_1_1_call_expr_a_s_t__inherit__graph.md5  class_a_formula_1_1_private_1_1_code_generator-members.html  class_a_formula_1_1_private_1_1_code_generator.html  class_a_formula_1_1_private_1_1_code_generator__inherit__graph.map  class_a_formula_1_1_private_1_1_code_generator__inherit__graph.md5  class_a_formula_1_1_private_1_1_expr_a_s_t-members.html  class_a_formula_1_1_private_1_1_expr_a_s_t.html  class_a_formula_1_1_private_1_1_expr_a_s_t__inherit__graph.map  class_a_formula_1_1_private_1_1_expr_a_s_t__inherit__graph.md5  class_a_formula_1_1_private_1_1_j_i_t_formula-members.html  class_a_formula_1_1_private_1_1_j_i_t_formula.html  class_a_formula_1_1_private_1_1_j_i_t_formula__coll__graph.map  class_a_formula_1_1_private_1_1_j_i_t_formula__coll__graph.md5  class_a_formula_1_1_private_1_1_j_i_t_formula__inherit__graph.map  (+163 more)
doc/html/search/: all_10.js  all_11.js  all_6.js  all_61.html  all_62.html  all_63.html  all_65.html  all_66.html  all_67.html  all_6a.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_7.js  all_70.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_7e.html  all_8.js  all_a.js  all_c.js  all_e.js  classes_0.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_62.html  classes_63.html  classes_65.html  classes_66.html  classes_6a.html  classes_6c.html  classes_6d.html  classes_6f.html  classes_7.js  (+61 more)
include/: .gitignore  Makefile.am  aformula.h  aformula.h.in
lib/: Makefile.am
lib/muparser/: Makefile.am  muParser.cpp  muParser.h  muParserBase.cpp  muParserBytecode.cpp  muParserDLL.cpp  muParserDLL.h  muParserDef.h  muParserTest.cpp  muParserTest.h  muParserTokenReader.cpp
lib/muparser/tests/: .gitignore  Makefile.am  runtests.cpp
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_6a.html  all_6d.html  all_6e.html  all_70.html  all_72.html  all_73.html  all_74.html  all_76.html  all_9.js  all_b.js  all_f.js  classes_1.js  classes_2.js  classes_63.html  classes_65.html  classes_66.html  classes_6a.html  classes_6c.html  classes_6e.html  classes_75.html  classes_76.html  classes_a.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_62.html  enumvalues_6e.html  files_2.js  files_6.js  (+47 more)
src/: .gitignore  Makefile.am  aformula.cpp  backend.h  benchmark.cpp  c_api.cpp  codegenerator.h  formula.cpp  jitformula.cpp  jitformula.h  libjitformula.cpp  libjitformula.h  llvmformula.cpp  llvmformula.h  muparserformula.cpp  muparserformula.h  parser.cpp  parser.h  parsetree.h  timer.cpp  timer.h
tests/: .gitignore  Makefile.am  test1.cpp  test2.cpp  test3.cpp  test4.c
